# AutoGen-CC-Integration

./: .gitignore  CLAUDE.md  GEMINI.md  POETRY_SETUP.md  VS_CODE_STUDIO_SYNC_GUIDE.md  add_memory_config.sql  alembic.ini  autogen-claude-integration.code-workspace  memory-bank.md  package-lock.json  package.json  pyproject.toml  simple-workspace.code-workspace  update_agents_only.sql  update_hive_db.sql
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_and_conventions.md  corrected_project_scope.md  current_state_and_priorities.md  project_purpose_and_overview.md  suggested_commands.md  task_completion_workflow.md  tech_stack_and_architecture.md
alembic/versions/: 599b12ef605f_initial_schema.py
autogen/: CLAUDE.md  alembic.ini  config.py  quickstart.py  requirements.txt  run_test.sh  test_autogen_064.py  test_sync_agent.py  verify_test_agent.py
autogen/alembic/versions/: 9011ddc4ef1a_current_schema.py
autogen/aws_deployment/: CLAUDE.md  ecs_deployment.yaml  lambda_autogen.py  serverless.yml
autogen/examples/: multi_agent_examples.py  single_agent_example.py
autogen/studio/: AUTOGEN_STUDIO_GUIDE.md  HOW_TO_USE_IN_STUDIO.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  TROUBLESHOOTING_COMPLETE.md  UI_SETUP_COMPLETE.md  alembic.ini  auto_sync_to_studio.py  autogen04202.db  demo_performance_results.json  demo_performance_test.py  demo_test_agent.py  import_claude_team.py  marker_team.json  optimization_status.py  performance_benchmark.py  register_agents_in_studio.py  requirements_sync.txt  simple_test_agent.json  studio_setup_helper.py  sync_monitor_dashboard.py  team.json  test_agent.py  test_complete_integration.py  test_workflow.json
autogen/studio/alembic/versions/: 5d5f623729c9_current_schema.py  74485788131e_current_schema.py
autogen/studio/configs/: test_agent_config.json  test_skills.json  test_workflow.json
autogen/studio/myapp/alembic/versions/: 3451a83d18d9_initial_schema.py
autogen/studio/studio_configs/: test_agents.json  test_team.json
autogen/studio_configs/: agents.json  example_deep_research_teat.json  example_selector_team.json  example_web_agent_team.json  teams.json
autogen/utils/: helpers.py
docs-prd/: AUTOGEN_META_DEVELOPMENT_TEAM_PRD.md  MULTI_AGENT_ORCHESTRATION_PRD.md  Project_Scope_Autogen.md
memory/agents/: README.md
memory/sessions/: README.md
wrapper/: CLAUDE.md
